--- a/assets/index.html
+++ b/assets/index.html
@@ -41,7 +41,7 @@
               </tr>
               <tr>
                 <td headers="umailTxt">
-                  <input type="email" style="ime-mode:inactive" id="umail" class="umail first" name="umail" placeholder="이메일 주소 입력" maxlength="40" title="이메일 주소 입력">
+                  <input type="email" style="ime-mode:inactive" id="umail" class="umail first" name="umail" placeholder="이메일 주소 입력" maxlength="40" title="이메일 주소 입력" onchange='inputVal()'>
                   <p class="none_p">인증 버튼을 클릭하시면 메일이 전송됩니다.</p>
                 </td>
                 <td class="table"><input class="send_prove" type="submit" value="전송"></td>
